--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,8 @@
     "configstore": "^5.0.1",
     "create-require": "^1.1.1",
     "crypto-random-string": "^2.0.0",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "debug": "^3.2.7",
     "decompress-response": "^3.3.0",
     "deep-extend": "^0.6.0",
