--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,10 @@
 {
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.18",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
@@ -18,6 +21,7 @@
     "ansi-styles": "^4.3.0",
     "anymatch": "^3.1.2",
     "arg": "^4.1.3",
+    "axios": "^0.26.0",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.2.0",
     "boxen": "^5.1.2",
@@ -112,6 +116,7 @@
     "to-readable-stream": "^1.0.0",
     "to-regex-range": "^5.0.1",
     "touch": "^3.1.0",
+    "ts-jest": "^27.1.3",
     "type-fest": "^0.20.2",
     "typedarray-to-buffer": "^3.1.5",
     "undefsafe": "^2.0.5",
@@ -128,7 +133,7 @@
     "yn": "^3.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit",
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p ."
