Added validation for incoming data, removed all require keywords

--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,13 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.18",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
@@ -24,6 +28,7 @@
     "axios": "^0.26.0",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.2.0",
+    "body-parser": "^1.19.2",
     "boxen": "^5.1.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
@@ -54,6 +59,7 @@
     "end-of-stream": "^1.4.4",
     "escape-goat": "^2.1.1",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "fill-range": "^7.0.1",
     "get-stream": "^4.1.0",
     "glob-parent": "^5.1.2",
